--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Freelancevanguard</title>
-    <link rel="shortcut icon" href="images/TFV logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/TFV logo.jpeg" style="border-radius:50% ;" type="image/x-icon">
     <link rel="stylesheet" href="tfv.css" />
     <link rel="stylesheet" href="responsive.css" />
   </head>
